preparing deployment